CNSDEVCOLECT/force-app/main/default/objects/Alarma_Nectia__c/Alarma_Nectia__c.object-meta.xml
<CustomObject>
    <description>Objeto creado para contener la información de alarmas asociadas a clientes</description>
    <label>Alarma</label>
    <nameField>
        <label>Nombre de alarma</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Alarmas</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>