CNSDEVCOLECT/force-app/main/default/objects/Alarma_Nectia__c/fields/Cliente_Nectia__c.field-meta.xml
<CustomField>
    <fullName>Cliente_Nectia__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Cliente</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Alarmas</relationshipLabel>
    <relationshipName>Alarmas</relationshipName>
    <type>Lookup</type>
</CustomField>