CNSDEVCOLECT/force-app/main/default/objects/Alarma_Nectia__c/fields/Detalle_resultado__c.field-meta.xml
<CustomField>
    <fullName>Detalle_resultado__c</fullName>
    <label>Detalle resultado</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Anuló/Rescató su póliza</fullName>
            </value>
            <value>
                <fullName>Apto</fullName>
            </value>
            <value>
                <fullName>Cliente necesita monto mayor</fullName>
            </value>
            <value>
                <fullName>Disminuye prima y/o elimina coberturas</fullName>
            </value>
            <value>
                <fullName>Firma denegada</fullName>
            </value>
            <value>
                <fullName>Gestionado Anteriormente</fullName>
            </value>
            <value>
                <fullName>Le gusta método tradicional</fullName>
            </value>
            <value>
                <fullName>Lo evaluara con la familia</fullName>
            </value>
            <value>
                <fullName>Muy caro/tasa muy alta</fullName>
            </value>
            <value>
                <fullName>No Acepta</fullName>
            </value>
            <value>
                <fullName>No acepta autenticación</fullName>
            </value>
            <value>
                <fullName>No apto</fullName>
            </value>
            <value>
                <fullName>No desea compartir sus datos</fullName>
            </value>
            <value>
                <fullName>No desea que lo llamen</fullName>
            </value>
            <value>
                <fullName>No existen regalos asociados</fullName>
            </value>
            <value>
                <fullName>No le interesa</fullName>
            </value>
            <value>
                <fullName>No quiere aumentar su deuda</fullName>
            </value>
            <value>
                <fullName>No quiere más productos CNS</fullName>
            </value>
            <value>
                <fullName>No quiere pagar parte del ahorro</fullName>
            </value>
            <value>
                <fullName>No quiere préstamo</fullName>
            </value>
            <value>
                <fullName>No se ofrece, no cumple requisitos</fullName>
            </value>
            <value>
                <fullName>No tiene email</fullName>
            </value>
            <value>
                <fullName>No tiene impresora</fullName>
            </value>
            <value>
                <fullName>No usa internet</fullName>
            </value>
            <value>
                <fullName>Plazo no adecuado</fullName>
            </value>
            <value>
                <fullName>Producto en otro banco</fullName>
            </value>
            <value>
                <fullName>Producto ofrecido por Ejec. Venta</fullName>
            </value>
            <value>
                <fullName>Requiere disponibilidad inmediata</fullName>
            </value>
            <value>
                <fullName>Se envía a otra área</fullName>
            </value>
            <value>
                <fullName>Seguimiento</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>