CNSDEVCOLECT/force-app/main/default/objects/Alarma_Nectia__c/fields/Donde_tiene_cuenta__c.field-meta.xml
<CustomField>
    <fullName>Donde_tiene_cuenta__c</fullName>
    <label>Donde tiene cuenta</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Banco BBVA</fullName>
            </value>
            <value>
                <fullName>Banco BCI</fullName>
            </value>
            <value>
                <fullName>Banco Bice</fullName>
            </value>
            <value>
                <fullName>Banco BTG Pactual Chile</fullName>
            </value>
            <value>
                <fullName>Banco Chile</fullName>
            </value>
            <value>
                <fullName>Banco Estado</fullName>
            </value>
            <value>
                <fullName>Banco Falabella</fullName>
            </value>
            <value>
                <fullName>Banco HSBC Bank</fullName>
            </value>
            <value>
                <fullName>Banco Internacional</fullName>
            </value>
            <value>
                <fullName>Banco Itau</fullName>
            </value>
            <value>
                <fullName>Banco Ripley</fullName>
            </value>
            <value>
                <fullName>Banco Santander</fullName>
            </value>
            <value>
                <fullName>Banco Scotiabank</fullName>
            </value>
            <value>
                <fullName>Banco Security</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>