CNSDEVCOLECT/force-app/main/default/objects/Alarma_Nectia__c/fields/Estado_Nectia__c.field-meta.xml
<CustomField>
    <fullName>Estado_Nectia__c</fullName>
    <label>Estado</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Activa</fullName>
            </value>
            <value>
                <fullName>Inactiva</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>