CNSDEVCOLECT/force-app/main/default/objects/Alarma_Nectia__c/fields/Resultado_Nectia__c.field-meta.xml
<CustomField>
    <fullName>Resultado_Nectia__c</fullName>
    <label>Resultado</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Acepta</fullName>
            </value>
            <value>
                <fullName>Atiende a Tercero</fullName>
            </value>
            <value>
                <fullName>Autenticación errónea</fullName>
            </value>
            <value>
                <fullName>Cliente molesto</fullName>
            </value>
            <value>
                <fullName>Datos validados</fullName>
            </value>
            <value>
                <fullName>Información entregada</fullName>
            </value>
            <value>
                <fullName>Información no entregada</fullName>
            </value>
            <value>
                <fullName>Interesado</fullName>
            </value>
            <value>
                <fullName>No acepta</fullName>
            </value>
            <value>
                <fullName>No asiste</fullName>
            </value>
            <value>
                <fullName>No interesado</fullName>
            </value>
            <value>
                <fullName>No realizado</fullName>
            </value>
            <value>
                <fullName>Realizado</fullName>
            </value>
            <value>
                <fullName>Si asiste</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>