CNSDEVCOLECT/force-app/main/default/objects/Alarma_Nectia__c/fields/SEGUROS_Contact_Center__c.field-meta.xml
<CustomField>
    <fullName>SEGUROS_Contact_Center__c</fullName>
    <defaultValue>false</defaultValue>
    <label>SEGUROS - Contact Center</label>
    <type>Checkbox</type>
</CustomField>