CNSDEVCOLECT/force-app/main/default/objects/Alarma_Nectia__c/fields/SEGUROS_G_C_Chile_Stgo_Regiones__c.field-meta.xml
<CustomField>
    <fullName>SEGUROS_G_C_Chile_Stgo_Regiones__c</fullName>
    <defaultValue>false</defaultValue>
    <label>SEGUROS - G.C. Chile (Stgo. + Regiones)</label>
    <type>Checkbox</type>
</CustomField>