CNSDEVCOLECT/force-app/main/default/objects/Alarma_Nectia__c/fields/SEGUROS_G_C_Regiones__c.field-meta.xml
<CustomField>
    <fullName>SEGUROS_G_C_Regiones__c</fullName>
    <defaultValue>false</defaultValue>
    <label>SEGUROS - G.C. Regiones</label>
    <type>Checkbox</type>
</CustomField>