CNSDEVCOLECT/force-app/main/default/objects/Alarma_Nectia__c/fields/SEGUROS_Serv_al_Cliente_Antofagasta__c.field-meta.xml
<CustomField>
    <fullName>SEGUROS_Serv_al_Cliente_Antofagasta__c</fullName>
    <defaultValue>false</defaultValue>
    <label>SEGUROS-Serv. al Cliente Antofagasta</label>
    <type>Checkbox</type>
</CustomField>