CNSDEVCOLECT/force-app/main/default/objects/Alarma_Nectia__c/fields/SEGUROS_Serv_al_Cliente_Punta_Arenas__c.field-meta.xml
<CustomField>
    <fullName>SEGUROS_Serv_al_Cliente_Punta_Arenas__c</fullName>
    <defaultValue>false</defaultValue>
    <label>SEGUROS - Serv. al Cliente Punta Arenas</label>
    <type>Checkbox</type>
</CustomField>