CNSDEVCOLECT/force-app/main/default/objects/Alarma_Nectia__c/fields/SEGUROS_Serv_al_Cliente_Talca__c.field-meta.xml
<CustomField>
    <fullName>SEGUROS_Serv_al_Cliente_Talca__c</fullName>
    <defaultValue>false</defaultValue>
    <label>SEGUROS - Serv. al Cliente Talca</label>
    <type>Checkbox</type>
</CustomField>