CNSDEVCOLECT/force-app/main/default/objects/Alarma_Nectia__c/fields/SEGUROS_Serv_al_Cliente_Vi_a_del_Mar__c.field-meta.xml
<CustomField>
    <fullName>SEGUROS_Serv_al_Cliente_Vi_a_del_Mar__c</fullName>
    <defaultValue>false</defaultValue>
    <label>SEGUROS - Serv. al Cliente Viña del Mar</label>
    <type>Checkbox</type>
</CustomField>