CNSDEVCOLECT/force-app/main/default/objects/Alarma_Nectia__c/fields/SEGUROS_Servi_al_Cliente_Temuco__c.field-meta.xml
<CustomField>
    <fullName>SEGUROS_Servi_al_Cliente_Temuco__c</fullName>
    <defaultValue>false</defaultValue>
    <label>SEGUROS - Servi. al Cliente Temuco</label>
    <type>Checkbox</type>
</CustomField>