CNSDEVCOLECT/force-app/main/default/objects/Alarma_Nectia__c/fields/SEGUROS_Servicio_al_cliente_pais__c.field-meta.xml
<CustomField>
    <fullName>SEGUROS_Servicio_al_cliente_pais__c</fullName>
    <defaultValue>false</defaultValue>
    <label>SEGUROS - Servicio al cliente pais</label>
    <type>Checkbox</type>
</CustomField>