CNSDEVCOLECT/force-app/main/default/objects/Alarma_Nectia__c/fields/SEGUROS_Sucursales_Regiones__c.field-meta.xml
<CustomField>
    <fullName>SEGUROS_Sucursales_Regiones__c</fullName>
    <defaultValue>false</defaultValue>
    <label>SEGUROS-Sucursales Regiones</label>
    <type>Checkbox</type>
</CustomField>