CNSDEVCOLECT/force-app/main/default/objects/Alarma_Nectia__c/fields/Tipo_de_alarma_Nectia__c.field-meta.xml
<CustomField>
    <fullName>Tipo_de_alarma_Nectia__c</fullName>
    <label>Tipo de alarma</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Aviso</fullName>
            </value>
            <value>
                <fullName>Comercial</fullName>
            </value>
            <value>
                <fullName>Servicio</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>